--- a/paper.bib
+++ b/paper.bib
@@ -390,3 +390,24 @@ booktitle = {FASE},
   Pages                    = {28--35},
   Volume                   = {34}
 }
+
+@InProceedings{Curtsinger:Livshits:Zorn:Seifert:2011,
+  Title                    = {ZOZZLE: Fast and Precise In-Browser JavaScript Malware Detection},
+  Author                   = {Charlie Curtsinger and Benjamin Livshits and Benjamin G. Zorn and Christian Seifert},
+  Booktitle                = {Proceedings of the 20th USENIX Security Symposium},
+  Year                     = {2011},
+  Pages                    = {33-48}
+}
+@InProceedings{Pelizzi:Sekar:2012,
+  Title                    = {Protection, Usability and Improvements in Reflected XSS Filters},
+  Author                   = {Riccardo Pelizzi and R. Sekar},
+  Booktitle                = {Proceedings of the 7th ACM Symposium on Information, Computer and Communications Security (ASIACCS)},
+  Year                     = {2012},
+  Pages                    = {5-5}
+}
+@InProceedings{Sekar:2009,
+  Title                    = {An Efficient Black-box Technique for Defeating Web Application Attacks},
+  Author                   = {R. Sekar},
+  Booktitle                = {Proceedings of the 16th Annual Network and Distributed System Security Symposium (NDSS)},
+  Year                     = {2009}
+}
