--- a/experiments.tex
+++ b/experiments.tex
@@ -32,10 +32,9 @@ In our experimental evaluation of \Tool, we tested two hypotheses:
 \begin{compactenum}
 \item \underline{H1: Accuracy.}
     Bayesian reasoning \JCO{}{about the legitimacy of information release}, as implemented in \Tool,
-     yields a significant improvement \JC{in leakage detection} accuracy compared to the baseline of information-flow tracking.
-\item \JCO{\underline{H2: Applicability.} For real-life applications, \Tool\ remains effective under relaxation of the 
-     tag-based method for detection of relevant values and its stability improves.}
-    {\underline{H2: Power of Bayesian Analysis.} \Tool\ remains effective under relaxation of the tag-based method for detection of relevant values, and its stability and applicability to real-world applications improve.}
+     yields a significant improvement in leakage-detection accuracy compared to the baseline of information-flow tracking.
+\item \underline{H2: Applicability.} For real-life applications, \Tool\ remains effective under relaxation of the 
+     tag-based method for detection of relevant values and its stability improves.
 \end{compactenum}
 
 \input{exp1}
